ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectDetail__mdt/ApplicationConnectDetail__mdt.object-meta.xml
<CustomObject>
    <label>ApplicationConnectDetail</label>
    <pluralLabel>ApplicationConnectDetail</pluralLabel>
</CustomObject>