ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectDetail__mdt/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <label>ApplicationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sharepoint</fullName>
                <default>true</default>
                <label>Sharepoint</label>
            </value>
            <value>
                <fullName>AmazonS3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>