ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectDetail__mdt/fields/EndpointPath__c.field-meta.xml
<CustomField>
    <fullName>EndpointPath__c</fullName>
    <label>EndpointPath</label>
    <length>200</length>
    <type>Text</type>
</CustomField>