ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectDetail__mdt/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <label>NamedCredentialName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>